mosaic/src/tests/integration/snapshots/mosaic__tests__integration__basic__cannot_split_largest_terminal_when_there_is_no_room-2.snap
---
source: src/tests/integration/basic.rs
expression: snapshot
---
line18-b
line19-b
prompt $
 █      
