mosaic/src/tests/integration/snapshots/mosaic__tests__integration__basic__cannot_split_terminals_horizontally_when_active_terminal_is_too_small-3.snap
---
source: src/tests/integration/basic.rs
expression: snapshot
---
Bye from Mosaic!█                                                                                                        
                                                                                                                         
                                                                                                                         
                                                                                                                         
